2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.1

	* Makefile.am: Add doc to EXTRA_DIST, so we actually distribute our
	documentation.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.0

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* (Everything): Switch everything to explicitly use bash. Rename all
	scripts from .sh to .bash, use #!/bin/bash, etc.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Fix some load_config lines, remove an
	unnecessary one.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* -API, doc/API.txt, doc/Makefile: RST-ize the API specifications.
	Provide a Makefile for them.

2006-07-30  Mike Kelly  <pioto@pioto.org>

	* bash/delgroup.sh.in, bash/deluser.sh.in,
	bash/auth/{compat,files}-{GNU-glibc,BSD-FreeBSD}-{user,group}del.sh,
	bash/install_fail.sh.in, eselect/users.eselect.in: Add new user and
	group deletion scripts, which are called by the eselect script, and by
	the install_fail.sh.

2006-07-30  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: More improvements from Kugelfang and
	ciaranm on IRC.

2006-07-30  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Improve the eselect module, per advice from
	Kugelfang. Should now respect ROOT and have better style.

2006-07-29  Mike Kelly  <pioto@pioto.org>

	* bash/db.sh.in: Fix a typo, line 21,22 (missing \).

2006-07-28  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.2.0

2006-07-27  Mike Kelly  <pioto@pioto.org>

	* bash/install_fail.sh.in: Add the install_fail script, which is
	called by the package manager when an install fails. It rolls back
	anything which may have been done by the add script.

	* bash/add.sh.in, bash/db.sh.in, bash/addgroup.sh.in,
	bash/adduser.sh.in: Add stub ROOT parameter. Not yet really
	implemented anywhere, but it's part of the API.

	* API: Create a writeup of the API specs for dynusers.

2006-07-26  Mike Kelly  <pioto@pioto.org>

	* bash/auth/compat-{BSD-FreeBSD,GNU-glibc}-{user,group}del.sh,