@@ -1,9 +1,18 @@
-CLEANFILES = *~ done-check
+CLEANFILES = *~ .keep done-check
 MAINTAINERCLEANFILES = Makefile.in configure config/* aclocal.m4 \
-			INSTALL COPYING
+	INSTALL COPYING
 AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip
 EXTRA_DIST = autogen.bash doc
 SUBDIRS = . bash eselect
+
+userdbdir = $(localstatedir)/$(PACKAGE)/db/user
+userdb_DATA = .keep
+
+groupdbdir = $(localstatedir)/$(PACKAGE)/db/group
+userdb_DATA = .keep
+
+.keep :
+	touch $@
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(localstatedir)/$(PACKAGE)/db/user
