@@ -7,7 +7,7 @@ AC_CONFIG_AUX_DIR(config)
 
 VERSION_MAJOR=0
 VERSION_MINOR=3
-VERSION_MICRO=1
+VERSION_MICRO=2
 VERSION_FULL="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_MICRO"
 VERSION="$VERSION_FULL"
 
